--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,16 @@
 {
   "name": "client",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.14",
+    "bootstrap": "4.1.1",
     "graphql": "^0.13.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
